--- a/package.json
+++ b/package.json
@@ -13,31 +13,32 @@
   "private": true,
   "dependencies": {
     "2.4.2": "^1.0.0",
-    "@angular/animations": "^5.2.9",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/router": "^5.2.9",
-    "bootstrap": "^4.0.0",
-    "core-js": "^2.5.3",
-    "ngx-bootstrap": "^2.0.3",
+    "@angular/animations": "^6.0.7",
+    "@angular/common": "^6.0.7",
+    "@angular/compiler": "^6.0.7",
+    "@angular/core": "^6.0.7",
+    "@angular/forms": "^6.0.7",
+    "@angular/http": "^6.0.7",
+    "@angular/platform-browser": "^6.0.7",
+    "@angular/platform-browser-dynamic": "^6.0.7",
+    "@angular/router": "^6.0.7",
+    "bootstrap": "^4.1.1",
+    "core-js": "^2.5.7",
+    "ngx-bootstrap": "^3.0.1",
     "ngx-wow": "^1.0.2",
-    "rxjs": "^5.5.7",
+    "rxjs": "^6.2.1",
     "wowjs": "^1.1.3",
-    "zone.js": "^0.8.20"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.3",
-    "@angular/compiler-cli": "^5.2.9",
-    "@angular/language-service": "^5.2.9",
-    "@types/jasmine": "~2.8.6",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "^6.0.7",
+    "@angular/language-service": "^6.0.7",
+    "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~9.6.0",
-    "codelyzer": "^4.2.1",
+    "@types/node": "~10.5.2",
+    "codelyzer": "^4.4.2",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
@@ -45,10 +46,10 @@
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^1.0.0",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "^2.4.2"
+    "karma-jasmine-html-reporter": "^1.2.0",
+    "protractor": "~5.3.2",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.10.0",
+    "typescript": "^2.7.2"
   }
 }
