--- a/package.json
+++ b/package.json
@@ -22,8 +22,14 @@
     "@angular/platform-browser": "^6.0.7",
     "@angular/platform-browser-dynamic": "^6.0.7",
     "@angular/router": "^6.0.7",
+    "@types/chart.js": "^2.7.30",
+    "angular-bootstrap-md": "^6.2.1",
+    "angular5-csv": "^0.2.10",
     "bootstrap": "^4.1.1",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.7",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^3.0.1",
     "ngx-wow": "^1.0.2",
     "rxjs": "^6.2.1",
