--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:server:prod": "ng run vorota:server && webpack --config webpack.server.config.js --progress --colors",
+    "build:browser:prod": "ng build --prod",
+    "build:prod": "npm run build:server:prod && npm run build:browser:prod",
+    "server": "node local.js"
   },
   "private": true,
   "dependencies": {
@@ -19,20 +23,28 @@
     "@angular/core": "^6.0.7",
     "@angular/forms": "^6.0.7",
     "@angular/http": "^6.0.7",
-    "@angular/platform-browser": "^6.0.7",
+    "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.7",
+    "@angular/platform-server": "^6.0.0",
     "@angular/router": "^6.0.7",
+    "@ng-toolkit/universal": "^1.1.41-beta.110",
+    "@nguniversal/express-engine": "^6.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "@types/chart.js": "^2.7.30",
     "angular-bootstrap-md": "^6.2.1",
     "angular5-csv": "^0.2.10",
     "bootstrap": "^4.1.1",
     "chart.js": "^2.5.0",
     "core-js": "^2.5.7",
+    "cors": "~2.8.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ng2-meta": "^5.0.0",
     "ngx-bootstrap": "^3.0.1",
     "ngx-wow": "^1.0.2",
     "rxjs": "^6.2.1",
+    "ts-loader": "4.2.0",
+    "webpack-cli": "^2.1.4",
     "wowjs": "^1.1.3",
     "zone.js": "^0.8.26"
   },
