--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,9 @@
             "polyfills": "src/polyfills.ts",
             "assets": [
               "src/assets",
-              "src/favicon.ico"
+              "src/favicon.ico",
+              "src/php",
+              "src/.htaccess"
             ],
             "styles": [
               "node_modules/wowjs/css/libs/animate.css",
