--- a/package.json
+++ b/package.json
@@ -17,57 +17,58 @@
   "private": true,
   "dependencies": {
     "2.4.2": "^1.0.0",
-    "@angular/animations": "^6.0.7",
-    "@angular/common": "^6.0.7",
-    "@angular/compiler": "^6.0.7",
-    "@angular/core": "^6.0.7",
-    "@angular/forms": "^6.0.7",
-    "@angular/http": "^6.0.7",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.7",
-    "@angular/platform-server": "^6.0.0",
-    "@angular/router": "^6.0.7",
-    "@ng-toolkit/universal": "^1.1.41-beta.110",
-    "@nguniversal/express-engine": "^6.0.0",
-    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
-    "@types/chart.js": "^2.7.30",
-    "angular-bootstrap-md": "^6.2.1",
+    "@angular/animations": "^7.1.4",
+    "@angular/common": "^7.1.4",
+    "@angular/compiler": "^7.1.4",
+    "@angular/core": "^7.1.4",
+    "@angular/forms": "^7.1.4",
+    "@angular/http": "^7.1.4",
+    "@angular/platform-browser": "^7.1.4",
+    "@angular/platform-browser-dynamic": "^7.1.4",
+    "@angular/platform-server": "^7.1.4",
+    "@angular/router": "^7.1.4",
+    "@ng-toolkit/universal": "^1.1.50",
+    "@nguniversal/express-engine": "^7.0.2",
+    "@nguniversal/module-map-ngfactory-loader": "^7.0.2",
+    "@types/chart.js": "^2.7.42",
+    "angular-bootstrap-md": "^7.1.1",
     "angular5-csv": "^0.2.10",
-    "bootstrap": "^4.1.1",
-    "chart.js": "^2.5.0",
-    "core-js": "^2.5.7",
-    "cors": "~2.8.4",
+    "bootstrap": "^4.2.1",
+    "chart.js": "^2.7.3",
+    "core-js": "^2.6.1",
+    "cors": "~2.8.5",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng2-meta": "^5.0.0",
-    "ngx-bootstrap": "^3.0.1",
-    "ngx-wow": "^1.0.2",
-    "rxjs": "^6.2.1",
-    "ts-loader": "4.2.0",
-    "webpack-cli": "^2.1.4",
+    "ngx-bootstrap": "^3.1.4",
+    "ngx-wow": "^2.0.0",
+    "rxjs": "^6.3.3",
+    "ts-loader": "5.3.2",
+    "tslib": "^1.9.0",
+    "webpack-cli": "^3.2.0",
     "wowjs": "^1.1.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "^6.0.7",
-    "@angular/language-service": "^6.0.7",
+    "@angular-devkit/build-angular": "~0.11.4",
+    "@angular/cli": "7.1.4",
+    "@angular/compiler-cli": "^7.1.4",
+    "@angular/language-service": "^7.1.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.5.2",
-    "codelyzer": "^4.4.2",
-    "jasmine-core": "~3.1.0",
+    "@types/node": "~10.12.18",
+    "codelyzer": "^4.5.0",
+    "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "~3.1.4",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^1.2.0",
-    "protractor": "~5.3.2",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.10.0",
-    "typescript": "^2.7.2"
+    "karma-cli": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "^5.4.2",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.12.0",
+    "typescript": "3.1.6"
   }
 }
