fix slider advantages

--- a/angular.json
+++ b/angular.json
@@ -24,15 +24,10 @@
             ],
             "styles": [
               "node_modules/wowjs/css/libs/animate.css",
-              "node_modules/font-awesome/scss/font-awesome.scss",
-              "node_modules/angular-bootstrap-md/scss/bootstrap/bootstrap.scss",
-              "node_modules/angular-bootstrap-md/scss/mdb-free.scss",
               "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/wowjs/dist/wow.js",
-              "node_modules/chart.js/dist/Chart.js",
-              "node_modules/hammerjs/hammer.min.js"
+              "node_modules/wowjs/dist/wow.js"
             ]
           },
           "configurations": {
