--- a/package.json
+++ b/package.json
@@ -30,15 +30,11 @@
     "@ng-toolkit/universal": "^1.1.50",
     "@nguniversal/express-engine": "^7.0.2",
     "@nguniversal/module-map-ngfactory-loader": "^7.0.2",
-    "@types/chart.js": "^2.7.42",
-    "angular-bootstrap-md": "^7.1.1",
-    "angular5-csv": "^0.2.10",
     "bootstrap": "^4.2.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.1",
     "cors": "~2.8.5",
     "font-awesome": "^4.7.0",
-    "hammerjs": "^2.0.8",
     "ng2-meta": "^5.0.0",
     "ngx-bootstrap": "^3.1.4",
     "ngx-wow": "^2.0.0",
@@ -50,7 +46,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.4",
+    "@angular-devkit/build-angular": "^0.12.1",
     "@angular/cli": "7.1.4",
     "@angular/compiler-cli": "^7.1.4",
     "@angular/language-service": "^7.1.4",
